--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "",
     "main": "server.js",
     "scripts": {
-        "start": "node server.js",
+        "start": "nodemon server.js",
         "dev": "nodemon server.js"
     },
     "keywords": [],
@@ -14,6 +14,7 @@
         "bcryptjs": "^2.4.3",
         "body-parser": "^1.20.2",
         "cors": "^2.8.5",
+        "dotenv": "^16.4.5",
         "express": "^4.19.1",
         "jsonwebtoken": "^9.0.2",
         "mongoose": "^8.2.3",
